<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Ruslan Primak on 2/28/17 6:34 PM
  ~ Copyright (c) 2017. All rights reserved.
  ~
  ~ Last modified 2/28/17 6:16 PM
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/main_header"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <View
        android:id="@+id/view_divider_title"
        style="@style/view_divider_style"
        android:layout_below="@id/text_view_title" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="onResetClick"
        android:text="@string/reset_button" />

    <View
        android:id="@+id/view_divider_reset_buttom"
        style="@style/view_divider_style"
        android:layout_above="@id/button_reset" />

    <LinearLayout
        style="@style/fragment_container_style"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/view_divider_reset_buttom"
        android:layout_below="@id/view_divider_title">

        <fragment
            android:id="@+id/team_a_frag"
            style="@style/fragment_style"
            class="com.example.android.scorekeeper.TeamFragment"
            android:tag="@string/tag_team_a"
            tools:layout="@layout/fragment_team" />

        <View style="@style/fragment_divider_style" />

        <fragment
            android:id="@+id/team_b_frag"
            style="@style/fragment_style"
            class="com.example.android.scorekeeper.TeamFragment"
            android:tag="@string/tag_team_b"
            tools:layout="@layout/fragment_team" />

    </LinearLayout>


</RelativeLayout>
